@@ -10,7 +10,49 @@
 
 https://github.com/artsiomborisevich/03.git.hosting/actions/runs/3884317541
 
-### Notification when dockerfile has root user inside
+### Dockerfile (refactored according to lint)
+
+```yaml
+# base image to build a JRE
+FROM amazoncorretto:17.0.3-alpine as corretto-jdk
+
+# Build small JRE image
+RUN apk add --no-cache binutils \
+    && "$JAVA_HOME"/bin/jlink \
+         --verbose \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /customjre
+
+# main app image
+FROM alpine:3.17
+ENV JAVA_HOME=/jre
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# copy JRE from the base image
+COPY --from=corretto-jdk /customjre $JAVA_HOME
+
+# Add app user
+ARG APPLICATION_USER=appuser
+RUN adduser --no-create-home -u 1000 -D $APPLICATION_USER
+
+# Configure working directory
+RUN mkdir /app && \
+    chown -R $APPLICATION_USER /app
+
+USER 1000
+
+ARG JAR_FILE=target/spring-3.0.0.jar
+COPY --chown=1000:1000 ${JAR_FILE} /app/app.jar
+WORKDIR /app
+
+EXPOSE 8080
+ENTRYPOINT [ "/jre/bin/java", "-jar", "/app/app.jar" ]
+```
+### Notification when dockerfile has root user inside (another dockerfile)
 
 ![root](root.png)
 
